one small change (toList added)